--- a/templates/atomic/index.html
+++ b/templates/atomic/index.html
@@ -1,1 +1,185 @@
-<!DOCTYPE html><title></title>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta charset="utf-8">
+
+	<title>Demo</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" type="text/css" href="css/kube.min.css" />
+	<link rel="stylesheet" href="css/kube.responsive.min.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="css/master.css" />
+	<link rel="stylesheet" type="text/css" href="css/custom.css" media="all" />
+	
+	<script src="js/jquery.min.js"></script>
+	
+	<!--[if lt IE 9]>
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+</head>
+<body>
+<div class="wrapper">
+	<header id="header" class="group">
+		<h1>Butter &amp; Bread</h1>
+		<nav>
+			<ul>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Products</a></li>
+				<li><a href="#">Contact Us</a></li>
+			</ul>
+		</nav>
+	</header>
+	<div id="promo">
+		<img src="images/demopromo.jpg" alt="demopromo" height="300">
+	</div>
+	
+	<ul id="intro" class="block-three">
+		<li>
+			<div class="inner">
+				<h3>About Us</h3>
+				<h4 class="subheader">Some header subtitle</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<a href="#">Link More</a>
+			</div>		
+		</li>
+		<li>
+			<div class="inner">
+				<h3>Products</h3>
+				<h4 class="subheader">Header subtitle long and long</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<a href="#">Link More</a>
+			</div>		
+		</li>
+		<li>
+			<div class="inner">
+				<h3>Services</h3>
+				<h4 class="subheader">Another one header subtitle</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<a href="#">Link More</a>
+			</div>		
+		</li>				
+	</ul>
+
+</div><!-- /end .wrapper -->
+
+<div id="outer">
+	<div class="wrapper">
+		<div class="row">
+			<div class="twothird">
+			
+				<h2>Some Header</h2>
+				
+				<article id="blocks">
+					<dl>
+						<dt><img src="images/demoimage1.jpg" alt="" width="170" height="80"></dt>
+						<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</dd>
+					</dl>
+					<dl>
+						<dt><img src="images/demoimage2.jpg" alt="" width="170" height="80"></dt>
+						<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</dd>
+					</dl>
+					<dl>
+						<dt><img src="images/demoimage3.jpg" alt="" width="170" height="80"></dt>
+						<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</dd>
+					</dl>	
+					<dl>
+						<dt><img src="images/demoimage4.jpg" alt="" width="170" height="80"></dt>
+						<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</dd>
+					</dl>
+				</article>
+			
+			</div>
+			<div class="third">
+			
+				<div id="feedback">
+					<h3>Feedback</h3>
+					<form action="" class="forms">
+						<ul>
+							<li>
+								<label for="">Name</label>
+								<input type="text" class="width-100">
+							</li>
+							<li>
+								<label for="">Email</label>
+								<input type="email" class="width-100">
+							</li>
+							<li>
+								<textarea class="width-100" style="height: 80px;"></textarea>
+							</li>
+							<li>
+								<input type="submit" value="Send" class="btn">
+							</li>
+						</ul>
+					</form>
+					<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</small>
+				</div><!-- /end #feedback -->
+				
+			</div>
+		</div>
+	</div>
+</div><!-- /end #outer -->
+<div id="main">
+	<div class="wrapper">
+
+		<div class="row">
+			<div class="third">
+				
+				<div id="banner">
+					<img src="images/demobanner.jpg" alt="demobanner" width="500" height="200">
+				</div>
+				
+			</div>
+			<div class="twothird">
+				
+				<h3>Latest news</h3>
+				
+				<article id="news">
+					<small class="gray">Fri, 01/27/2012</small>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		
+					<small class="gray">Fri, 01/26/2012</small>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</article>
+				
+			</div>
+		</div>	
+		
+		<div id="partners">
+		
+			<div class="row">
+				<h4 class="push-third twothird">Our Partners</h4>
+			</div>
+			
+			<ul class="block-six">
+				<li><img src="images/demologo1.jpg" alt="demologo"></li>
+				<li><img src="images/demologo2.jpg" alt="demologo"></li>
+				<li><img src="images/demologo3.jpg" alt="demologo"></li>
+				<li><img src="images/demologo4.jpg" alt="demologo"></li>
+				<li><img src="images/demologo5.jpg" alt="demologo"></li>
+				<li><img src="images/demologo6.jpg" alt="demologo"></li>
+			</ul>
+		</div><!-- /end #partners -->
+			
+	</div>
+</div><!-- /end #main -->
+<footer id="footer">
+
+	<div class="wrapper">
+		<section>
+			© Butter &amp; Bread 2012
+		</section>
+		<nav>
+			<ul>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Products</a></li>
+				<li><a href="#">Contact Us</a></li>
+			</ul>
+		</nav>
+	</div>
+</footer>
+</body>
+</html>
